--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-jdk: openjdk10
+language: 
+	java
+os: 
+	windows
+jdk: 
+	openjdk11
+
+install:
+	- choco install java
+
 script:
-  - jdk_switcher use openjdk10
-  - # do stuff with OpenJDK 10
+
   - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
   - chmod +x $TRAVIS_BUILD_DIR/install-jdk.sh
   - export JAVA_HOME=$HOME/openjdk11
   - $TRAVIS_BUILD_DIR/install-jdk.sh -F 11 --target $JAVA_HOME
-  - # do stuff with open OpenJDK 11
