Обновлен файл для веб-сервиса по сборке и тестированию

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,4 @@
-language: 
-	java
-os: 
-	windows
-jdk: 
-	openjdk11
-
-script:
-
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-  - chmod +x $TRAVIS_BUILD_DIR/install-jdk.sh
-  - export JAVA_HOME=$HOME/openjdk11
-  - $TRAVIS_BUILD_DIR/install-jdk.sh -F 11 --target $JAVA_HOME
+language: java
+sudo: false
+os: windows
+jdk: openjdk11
